# project-status

./: .env.example  .gitignore  .gitmessage  AGENTS.md  AGENT_WORKFLOW.md  MEMORY.md  Makefile  PROJECT_BRIEF.md  Prompt.md  QUALITY_CHECKLIST.md  README.md  TODO.md  automated-run.sh  docker-compose.yml  status.yaml
api/: .env.example.local  .env.example.production  .env.example.stage  .env.example.test  Dockerfile  Makefile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_status_records.py
api/docs/: api-docs.md
api/project_status_api/: __init__.py  config.py  models.py  utils.py
api/project_status_api/api/: __init__.py
api/project_status_api/api_v1/: __init__.py
api/tests/: conftest.py  test_api.py
cli/: go.mod  main.go
cli/cmd/: add.go  add_test.go  config.go  config_test.go  delete.go  delete_test.go  list.go  list_test.go  root.go  show.go  show_test.go  update.go  update_test.go
cli/internal/client/: client.go  client_test.go
contracts/: README.md
contracts/openapi/: README.md
deploy/: README.md
deploy/production/: README.md
deploy/stage/: README.md
docs/: API-Contract.md  Architecture.md  Development.md  Implementation.md  Requirements.md  Structure.md  Tech-Stack.md
docs/adr/: README.md
infra/: README.md
infra/compose/: README.md
infra/compose/profiles/: README.md
ops/: README.md
ops/observability/: README.md
ops/runbooks/: README.md
scripts/: smoke-cli.sh  smoke-curl.sh
scripts/lib/: README.md
tests/e2e/: README.md
tests/integration/: Dockerfile  test_runner.py
web/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: StatusDetailView.tsx  StatusForm.tsx  StatusListView.tsx
(+1 files in other folders)
